# Vulkan-Gaussian-Splat-Viewer

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  CMakePresets.json  CMakePresets.json.bak  README.md
GaussianSplatLoader/: CMakeLists.txt
GaussianSplatLoader/include/: GaussianSplatPly.h  GaussianSplatPlyLoader.h
GaussianSplatLoader/include/structs/: Gaussian.h
GaussianSplatLoader/source/: GaussianSplatPly.cpp  GaussianSplatPlyLoader.cpp  main.cpp
Vk_GaussianSplatViewer/: CMakeLists.txt  CMakeLists.txt.bak
Vk_GaussianSplatViewer/Vk_GaussianSplatViewer/: Vk_GaussianSplatViewer.cpp
Vk_GaussianSplatViewer/include/: DeviceManager.h  Vk_GaussianSplatViewer.hpp
Vk_GaussianSplatViewer/include/3d/: GaussianSplatPlyLoader.h  ModelUtils.h  Scene.h
Vk_GaussianSplatViewer/include/camera/: FirstPersonCamera.h
Vk_GaussianSplatViewer/include/common/: Types.h
Vk_GaussianSplatViewer/include/config/: Config.inl
Vk_GaussianSplatViewer/include/core/: Engine.h
Vk_GaussianSplatViewer/include/enums/: BufferAllocationType.h  ShaderObjectType.h
Vk_GaussianSplatViewer/include/enums/inputs/: InputAction.h  UIAction.h
Vk_GaussianSplatViewer/include/materials/: Material.h  MaterialUtils.h  ShaderObject.h
Vk_GaussianSplatViewer/include/platform/: WindowManager.h
Vk_GaussianSplatViewer/include/platform/input/: InputManager.h  UIActionManager.h
Vk_GaussianSplatViewer/include/renderer/: DrawState.h  GPU_BufferContainer.h  RenderPass.h  Renderer.h  Subpass.h
Vk_GaussianSplatViewer/include/renderer/subpasses/: ForwardGeometryPass.h  GeometryPass.h  ImGuiPass.h  ScreenspacePass.h  TranslucencyPass.h
Vk_GaussianSplatViewer/include/structs/: EngineContext.h  EngineRenderTargets.h  GPU_Buffer.h  RenderContext.h  Renderable.h  RenderingAttachmentInfoData.h  WindowCreateParams.h
Vk_GaussianSplatViewer/include/structs/geometry/: GaussianSurface.cpp  GaussianSurface.h  Vertex2D.h
Vk_GaussianSplatViewer/include/structs/scene/: CameraData.h  CommonSceneData.h  GeometryData.h  PushConstantBlock.h
Vk_GaussianSplatViewer/include/vulkanapp/: DeviceManager.h  SwapchainManager.h
Vk_GaussianSplatViewer/include/vulkanapp/feature_activator/: VulkanFeatureActivator.h
Vk_GaussianSplatViewer/include/vulkanapp/utils/: DescriptorUtils.h  FileUtils.h  ImageUtils.h  MemoryUtils.h  RenderUtils.h
Vk_GaussianSplatViewer/shaders/: compile_shaders.bat
Vk_GaussianSplatViewer/shaders/common/: shader_common.glsl
Vk_GaussianSplatViewer/shaders/gaussian_surface/: gaussian.frag.glsl  gaussian.frag.spv  gaussian.vert.glsl  gaussian.vert.spv  gaussian_opaque.frag.glsl  gaussian_opaque.frag.spv
Vk_GaussianSplatViewer/shaders/opaque/: object.vert.glsl  object.vert.spv  opaque.frag.glsl  opaque.frag.spv
Vk_GaussianSplatViewer/shaders/translucency/color/: oit_weighted_color.frag.glsl  oit_weighted_color.frag.spv
Vk_GaussianSplatViewer/shaders/translucency/composite/: full_screen_triangle.vert.glsl  full_screen_triangle.vert.spv  oit_weighted_composite.frag.glsl  oit_weighted_composite.frag.spv
Vk_GaussianSplatViewer/shaders/triangle/: triangle.vert.glsl  triangle.vert.spv
Vk_GaussianSplatViewer/source/: DeviceManager.cpp  main.cpp
Vk_GaussianSplatViewer/source/3d/: GaussianSplatPlyLoader.cpp  ModelUtils.cpp  Scene.cpp
Vk_GaussianSplatViewer/source/camera/: FirstPersonCamera.cpp
Vk_GaussianSplatViewer/source/core/: Engine.cpp
Vk_GaussianSplatViewer/source/materials/: Material.cpp  MaterialUtils.cpp  ShaderObject.cpp
Vk_GaussianSplatViewer/source/platform/: WindowManager.cpp
Vk_GaussianSplatViewer/source/platform/input/: InputManager.cpp  UIActionManager.cpp
Vk_GaussianSplatViewer/source/render/: GPU_BufferContainer.cpp  RenderPass.cpp  Renderer.cpp  RendererVulkan.cpp  Subpass.cpp
Vk_GaussianSplatViewer/source/render/subpasses/: GeometryPass.cpp  ImGuiPass.cpp
Vk_GaussianSplatViewer/source/renderer/: DrawState.cpp  GPU_BufferContainer.cpp  RenderPass.cpp  Renderer.cpp  RendererVulkan.cpp  Subpass.cpp
Vk_GaussianSplatViewer/source/renderer/subpasses/: ForwardGeometryPass.cpp  ImGuiPass.cpp  ScreenspacePass.cpp  TranslucencyPass.cpp
Vk_GaussianSplatViewer/source/vulkanapp/: DeviceManager.cpp  SwapchainManager.cpp  VulkanCleanupQueue.cpp
Vk_GaussianSplatViewer/source/vulkanapp/feature_activator/: VulkanFeatureActivator.cpp
Vk_GaussianSplatViewer/source/vulkanapp/utils/: DescriptorUtils.cpp  FileUtils.cpp  ImageUtils.cpp  MemoryUtils.cpp  RenderUtils.cpp
cmake/: Dependencies.cmake
